2008-11-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* tests/tm_basic.cxx (max): Was wrong way round. Resolves issue
	1000636.

2008-07-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/thread.inl: Silence some warnings by assigning
	string literals to const char *, not char *.

2007-08-23  Hans Rosenfeld  <rosenfeld@grumpf.hope-2000.org>

	* tests/intr0.cxx, tests/kintr0.c: As suggested by Bart Veer,
	priorities of the interrupts created by intr0 and kintr0 can now
	be overridden by the HAL through HAL_INTR_TEST_PRIO_x constants.

2007-07-02  Gary Thomas  <gary@mlbassoc.com>

	* src/debug/dbg_gdb.cxx: 
	* src/common/thread.cxx (Cyg_IdleThread): Add (char *) casts
	to make GCC/4.2.x happy.

2007-06-11  Nick Garnett  <nickg@ecoscentric.com>

	* tests/klock.c (entry0, entry1): Modify mbox part of test to
	reflect use of plain mbox implementation. The precise ordering of
	events is slightly different.

2007-01-07  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sync/mbox.cxx (Cyg_Mbox::get): Fix compiler warning with gcc
	version 4.1.2.

2006-12-08  Nick Garnett  <nickg@ecoscentric.com>
	
        * src/sched/mlqueue.cxx (add_thread, yield): 
	* src/sched/sched.cxx (unlock_inner, thread_entry): 
	* include/mlqueue.hxx (class Cyg_SchedThread_Implementation):
	* include/kapidata.h (CYG_SCHEDTHREAD_TIMESLICE_MEMBER): 
	* include/bitmap.hxx (class Cyg_SchedThread_Implementation):
	Reimplement timeslicing code. There is now a timeslice_count field
	in each thread which is moved to and from the per-CPU counter
	during thread dispatch. This approach has been taken to minimize
	the changes needed to SMP code. Scheduler specific thread
	functions handle counter save, restore and reset. These functions
	are defined (as empty inlines) even when timeslicing is disabled,
	or in non-timeslicing schedulers, to avoid adding ifdefs to the
	code (this change actually removes some).

	* tests/timeslice2.c: 
	* cdl/kernel.cdl: Added timeslice2 test to test behaviour of